# weaving-geodesic-foliations

./: .gitignore  BommesFieldIntegration.cpp  BommesFieldIntegration.h  CMakeLists.txt  CoMISoWrapper.cpp  CoMISoWrapper.h  Colors.cpp  Colors.h  Covariant.cpp  CoverMesh.cpp  CoverMesh.h  CurlLocalIntegration.cpp  CurlLocalIntegration.h  CutMesh.cpp  CutMesh.h  DataLoad.cpp  DataLoad.h  Distance.h  FaceBased.cpp  FaceBased.h  FieldIntegration.h  FieldOptimization.cpp  FieldOptimization.h  FieldSurface.cpp  FieldSurface.h  FileIO.cpp  FileIO.h  GNGlobalIntegration.cpp  GNGlobalIntegration.h  GaussNewton.cpp  GaussNewton.h  GaussNewton_new.cpp  ImGuiDouble.h  InitField.cpp  InitField.h  LinearSolver.cpp  LinearSolver.h  MIGlobalIntegration.cpp  MIGlobalIntegration.h  OurFieldIntegration.cpp  (+27 more)
cmake/: FindCholmod.cmake  FindSPQR.cmake
mass/: sphere_threesing.transport  sphere_threesing1_1field.qixing  sphere_threesing2_1field.qixing
meshes/: luisa_geo.rlx  schwatzp.mlp  torus.txt
old/: Covariant.h  FaceBased.h  FileIO.cpp  InitField.cpp  Physics.h  RelaxViewer.cpp  RelaxViewer.h  StateStructs.h  fd.txt  field_dt.txt  main.cpp
rlx/: aneurism6k_holes.rlx  aneurism_small_nocut.rlx  better_bunny.rlx  bumpy-box.rlx  dress.relax  fish.rlx  icosahedron.rlx  schwartz.rlx  schwartz_big.rlx  spring.rlx  starfish.rlx  torus.relax  torus.rlx  torus2.relax  twohole.relax  twoholed.rlx
unprocessed_meshes/: Coral_Frag_Hub_R2.stl  Diving_Helmet.stl  artery_vain_fistula.stl  chair.STL  concrete_fish.stl  coral_shade.stl  leaf.stl  starfish_squiggly.stl
utils/: Torus2.mat  load_obj.m  (+30 more)
(+7 files in other folders)
